--- a/html/dashboard/cliente.html
+++ b/html/dashboard/cliente.html
@@ -26,8 +26,8 @@
               </button>
               <a
                 class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
-                href="#"
-                >ROBUX</a
+                href="../dashboard/dashboard.html"
+                >PCSHOP</a
               >
               <button
                 class="navbar-toggler"
@@ -66,11 +66,8 @@
                       <i class="bi bi-person-fill"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </li>
+                      <li><a class="dropdown-item" href="../site/index.html">Ir a pagina principal</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboard.html">Dashboard</a></li>
                     </ul>
                   </li>
                 </ul>
