--- a/html/dashboard/productos.html
+++ b/html/dashboard/productos.html
@@ -26,8 +26,8 @@
               </button>
               <a
                 class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
-                href="#"
-                >ROBUX</a
+                href="../dashboard/dashboard.html"
+                >PCSHOP</a
               >
               <button
                 class="navbar-toggler"
@@ -66,11 +66,8 @@
                       <i class="bi bi-person-fill"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </li>
+                      <li><a class="dropdown-item" href="../site/index.html">Ir a pagina principal</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboard.html">Dashboard</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -177,24 +174,25 @@
             <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
             <td class="align-middle ">TARJETA SUPER PRO</td>
             <td class="align-middle ">10</td>
-            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
+            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i></button></td>
           </tr>
           <tr>
             <th scope="row">101</th>
             <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
             <td class="align-middle ">TARJETA SUPER PRO 2</td>
             <td class="align-middle ">20</td>
-            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
+            <td class="align-middle " colspan="2"><button ><i class="bi bi-pencil-square"></i></button></td>
           </tr>
           <tr>
             <th scope="row">102</th>
             <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
             <td class="align-middle ">TARJETA SUPER PRO 3</td>
             <td class="align-middle ">30 </td>
-            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
+            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i></button></td>
           </tr>
         </tbody>
       </table>
+      <a class="btn btn-primary" href="../dashboard/añadirproducto.html" role="button">Añadir nuevo producto</a>
 
 </div>
 </body>
